charts/templates/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mongokafka-mongonet: "true"
        io.kompose.service: broker
    spec:
      containers:
        - env:
            - name: CONFLUENT_SUPPORT_CUSTOMER_ID
              value: anonymous
            - name: KAFKA_ADVERTISED_LISTENERS
              value: LISTENER_1://broker:29092,LISTENER_2://localhost:9092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_DELETE_TOPIC_ENABLE
              value: "true"
            - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
              value: "0"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: LISTENER_1
            - name: KAFKA_LISTENERS
              value: LISTENER_1://broker:29092,LISTENER_2://broker:9092
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: LISTENER_1:PLAINTEXT,LISTENER_2:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: confluentinc/cp-kafka:7.2.2
          name: broker
          resources: {}
      hostname: broker
      restartPolicy: Always
status: {}
