charts/templates/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mongokafka-mongonet: "true"
        io.kompose.service: consumer
    spec:
      containers:
        - image: ghcr.io/aesaganda/mongokafka/consumer:latest
          name: consumer
          resources: {}
      restartPolicy: Always
status: {}
