charts/templates/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: producer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mongokafka-mongonet: "true"
        io.kompose.service: producer
    spec:
      containers:
        - image: ghcr.io/aesaganda/mongokafka/producer:latest
          name: producer
          resources: {}
      restartPolicy: Always
status: {}
