charts/templates/rest-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rest-proxy
  name: rest-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rest-proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mongokafka-mongonet: "true"
        io.kompose.service: rest-proxy
    spec:
      containers:
        - env:
            - name: KAFKA_REST_BOOTSTRAP_SERVERS
              value: broker:29092
            - name: KAFKA_REST_HOST_NAME
              value: rest-proxy
            - name: KAFKA_REST_LISTENERS
              value: http://0.0.0.0:8082
            - name: KAFKA_REST_SCHEMA_REGISTRY_URL
              value: http://schema_registry:8081
          image: confluentinc/cp-kafka-rest:7.2.2
          name: rest-proxy
          resources: {}
      hostname: rest-proxy
      restartPolicy: Always
status: {}
