charts/templates/connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: connect
  name: connect
spec:
  ports:
    - name: "35000"
      port: 35000
      targetPort: 35000
  selector:
    io.kompose.service: connect
status:
  loadBalancer: {}
