charts/templates/mongo1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f prebuilt-docker-compose.yml convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo1
  name: mongo1
spec:
  ports:
    - name: "35001"
      port: 35001
      targetPort: 27017
  selector:
    io.kompose.service: mongo1
status:
  loadBalancer: {}
