charts/templates/mongokafka-mongonet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mongokafka-mongonet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mongokafka-mongonet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mongokafka-mongonet: "true"
